# sentry-webhooks-for-telegram

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  sample.env
app/: __init__.py  config.py  container.py  logger.py  main.py
app/adapters/: __init__.py  storage.py  telegram_bot.py
app/client/: __init__.py  storage.py
app/commands/: __init__.py  bind_chat.py  check_chat.py  start.py
app/decorators/: __init__.py  fill.py
app/messages/commands/: bind_existing.html  bind_noargs.html  bind_restricted.html  chat_connections.html  success_connect.html
app/messages/webhook/: issue.html  not_implemented.html
app/model/: sentry.py  storage.py
app/util/: config.py  ioc.py
app/web/: __init__.py  k8s.py  middleware.py  webhook.py
