[tool.poetry]
name = "sentry-webhooks"
version = "0.1.0"
description = ""
authors = ["Konstantin Rudenok <const.stuff@gmail.com>"]
readme = "README.md"
packages = [{include = "sentry_webhooks"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
dependency-injector = "^4.40.0"
pydantic = "^1.10.2"
environs = "^9.5.0"
uvicorn = "^0.20.0"
telethon = "^1.26.0"
sqlalchemy = "^1.4.44"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
gitlint = "^0.17.0"
flake8-adjustable-complexity = "^0.0.6"
mypy = "^0.982"
anyio = "^3.6.2"
pytest-asyncio = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
